clap_derive/tests/ui/flatten_on_subcommand.rs
#[derive(clap::Clap)]
struct Opt {
    #[clap(flatten)]
    sub: SubCmd,
}

#[derive(clap::Clap)]
enum SubCmd {}

fn main() {}
